--- a/index.html
+++ b/index.html
@@ -1,18 +1,23 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image" href="/logo.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ICSEAMS-2025 | International Conference on Sustainable Energy and Advanced Manufacturing Systems</title>
-    <meta name="description" content="1st International Conference on Sustainable Energy and Advanced Manufacturing Systems, to be held from 11th–13th September 2025 at B V Raju Institute of Technology (BVRIT), Narsapur, Telangana, India." />
-    <meta name="keywords" content="ICSEAMS, Conference, Sustainable Energy, Advanced Manufacturing, BVRIT, Engineering Conference" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image" href="/icmisi.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>ICMISI-2025 </title>
+  <meta name="description"
+    content="Civil Engineering department at Vishnu Institute of Technology-Bhimavaram is organizing International Conference on Materials Innovation and Sustainable Infrastructure (ICMISI 2025) on 11th & 12th, December 2025. Sustainable infrastructure is crucial for mitigating environmental challenges, such as climate change, resource depletion, and pollution." />
+  <meta name="keywords"
+    content="ICMISI, Conference, Materials Innovation and Sustainable Infrastructure, Advanced Manufacturing, VITB, Engineering Conference" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
