--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image" href="/icmisi.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ICMISI-2025 </title>
+  <title>ICMISI-2026 </title>
   <meta name="description"
-    content="Civil Engineering department at Vishnu Institute of Technology-Bhimavaram is organizing International Conference on Materials Innovation and Sustainable Infrastructure (ICMISI 2025) on 11th & 12th, December 2025. Sustainable infrastructure is crucial for mitigating environmental challenges, such as climate change, resource depletion, and pollution." />
+    content="Civil Engineering department at Vishnu Institute of Technology-Bhimavaram is organizing International Conference on Materials Innovation and Sustainable Infrastructure (ICMISI 2026) on 1st & 2nd April 2026. Sustainable infrastructure is crucial for mitigating environmental challenges, such as climate change, resource depletion, and pollution." />
   <meta name="keywords"
     content="ICMISI, Conference, Materials Innovation and Sustainable Infrastructure, Advanced Manufacturing, VITB, Engineering Conference" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
