--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image" href="/icmisi.png" />
+  <link rel="icon" type="image" href="/icmisi.jpg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>ICMISI-2026 </title>
   <meta name="description"
